# accelerated-intelligent-document-processing-on-aws

./: .clinerules  .env  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  1751146101381_classification_state.json  AWS_NAMING_COMPLIANCE_FIX.md  AWS_SERVICES_AND_ROLES.md  AmazonQ.md  CHANGELOG.md  CONTRIBUTING.md  COST_CALCULATOR.md  DEVELOPMENT_COMMANDS.md  FAVICON_UPDATE_GUIDE.md  HITL_A2I_TERMINOLOGY_UPDATES.md  IMPLEMENTATION_GUIDE.md  LICENSE  LICENSE.txt  Makefile  OCR_CODE_IMPROVEMENTS_SUMMARY.md  OCR_IMAGE_RESIZE_FIX_SUMMARY.md  PATTERN1_CONFIDENCE_ENHANCEMENT.md  PROJECT_STRUCTURE.md  README.md  S3_ARN_FORMAT_FIX.md  SECURITY_UPDATE_SUMMARY.md  VERSION  WELL_ARCHITECTED.md  YAML_PARSING_ERROR_FIX.md  agents.json  custom-config.yaml  enhance_pattern1_confidence.py  genaiic-idp-accelerator.code-workspace  github-issue-ocr-default-sizing.md  package-lock.json  pr-summary.md  publish.py  publish.sh  publish_v1.py  (+13 more)
.dsr/: diagrams.md  (+5 more)
lib/idp_common_pkg/: .gitignore  MANIFEST.in  Makefile  README.md  clean_build.sh  pyproject.toml  pytest.ini  setup.cfg  setup.py
lib/idp_common_pkg/idp_common/: README.md  __init__.py  docs_service.py  docs_service_README.md  document_testing_plan.md  document_todo.md  models.py
lib/idp_common_pkg/idp_common/agents/: README.md  __init__.py
lib/idp_common_pkg/idp_common/agents/analytics/: __init__.py  agent.py  config.py  utils.py
lib/idp_common_pkg/idp_common/agents/common/: __init__.py  config.py  dynamodb_logger.py  idp_agent.py  monitoring.py  oauth_auth.py  response_utils.py  strands_bedrock_model.py
lib/idp_common_pkg/idp_common/agents/dummy/: __init__.py  agent.py
lib/idp_common_pkg/idp_common/agents/external_mcp/: __init__.py  agent.py  config.py
lib/idp_common_pkg/idp_common/agents/factory/: __init__.py  agent_factory.py  registry.py
lib/idp_common_pkg/idp_common/agents/orchestrator/: __init__.py  agent.py
lib/idp_common_pkg/idp_common/agents/sample_calculator/: __init__.py  agent.py
lib/idp_common_pkg/idp_common/agents/testing/: .env.example  README.md  __init__.py  run_analytics_test.py  test_analytics.py
lib/idp_common_pkg/idp_common/appsync/: README.md  __init__.py  client.py  mutations.py  service.py
lib/idp_common_pkg/idp_common/assessment/: README.md  README_GRANULAR.md  __init__.py  example_usage.py  granular_service.py  models.py  service.py
lib/idp_common_pkg/idp_common/bda/: README.md  __init__.py  bda_blueprint_creator.py  bda_blueprint_service.py  bda_invocation.py  bda_service.py  schema_converter.py
lib/idp_common_pkg/idp_common/bedrock/: README.md  __init__.py  client.py
lib/idp_common_pkg/idp_common/classification/: README.md  __init__.py  models.py  service.py
lib/idp_common_pkg/idp_common/config/: __init__.py  configuration_manager.py
lib/idp_common_pkg/idp_common/criteria_validation/: README.md  __init__.py  models.py  service.py
lib/idp_common_pkg/idp_common/discovery/: classes_discovery.py
lib/idp_common_pkg/idp_common/dynamodb/: README.md  __init__.py  client.py  example.py  service.py
lib/idp_common_pkg/idp_common/evaluation/: README.md  __init__.py  comparator.py  metrics.py  models.py  service.py
lib/idp_common_pkg/idp_common/extraction/: README.md  __init__.py  models.py  service.py
lib/idp_common_pkg/idp_common/image/: __init__.py
lib/idp_common_pkg/idp_common/metrics/: __init__.py
lib/idp_common_pkg/idp_common/model_finetuning/: README.md  __init__.py  create_finetuning_job.py  create_provisioned_throughput.py  inference_example.py  models.py  prepare_nova_finetuning_data.py  service.py
lib/idp_common_pkg/idp_common/ocr/: README.md  __init__.py  document_converter.py  results.py  service.py
lib/idp_common_pkg/idp_common/reporting/: README.md  __init__.py  save_reporting_data.py
lib/idp_common_pkg/idp_common/s3/: __init__.py
lib/idp_common_pkg/idp_common/s3vectors/: __init__.py  client.py
lib/idp_common_pkg/idp_common/summarization/: README.md  __init__.py  markdown_formatter.py  models.py  service.py
lib/idp_common_pkg/idp_common/utils/: __init__.py  s3util.py
lib/idp_common_pkg/tests/: README.md  __init__.py  conftest.py  pytest.ini  test_assessment_backward_compatibility.py  test_max_pages_classification.py
lib/idp_common_pkg/tests/integration/: __init__.py  test_discovery_config_integration.py  test_placeholder.py
lib/idp_common_pkg/tests/unit/: __init__.py  test_confidence_threshold.py  test_criteria_validation_models.py  test_document.py  test_document_compression.py  test_document_converter.py  test_granular_assessment.py  test_hello.py  test_max_pages_classification.py  test_publish.py  test_utils.py
lib/idp_common_pkg/tests/unit/agents/: README.md  test_common_config.py
lib/idp_common_pkg/tests/unit/appsync/: __init__.py  test_appsync_client.py  test_appsync_mutations.py  test_appsync_service.py
lib/idp_common_pkg/tests/unit/assessment/: __init__.py  test_assessment_enabled_property.py  test_assessment_service.py  test_bounding_box_integration.py  test_company_address_fix.py  test_granular_bbox_conversion.py  test_nested_geometry_conversion.py
lib/idp_common_pkg/tests/unit/bda/: __init__.py  test_bda_blueprint_service.py  test_bda_invocation.py  test_bda_service.py  test_bda_service_part2.py  test_kie_bda_service.py  test_kie_bda_service_part2.py
lib/idp_common_pkg/tests/unit/classification/: __init__.py  test_classification_models.py  test_classification_service.py  test_limited_classification_metering.py
lib/idp_common_pkg/tests/unit/discovery/: README.md  __init__.py  test_classes_discovery.py  test_classes_discovery_config.py  test_classes_discovery_integration.py  test_discovery_processor_config.py
lib/idp_common_pkg/tests/unit/evaluation/: __init__.py  test_evaluation_service.py
lib/idp_common_pkg/tests/unit/extraction/: __init__.py  test_extraction_models.py  test_extraction_service.py
lib/idp_common_pkg/tests/unit/ocr/: __init__.py  test_image_only_ocr.py  test_ocr_results.py  test_ocr_service.py
lib/idp_common_pkg/tests/unit/reporting/: __init__.py  test_config_pricing.py  test_cost_calculation.py  (+2 more)
(+873 files in other folders)
