[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "idp_common"
version = "0.3.3"
description = "Common utilities for GenAI IDP Accelerator patterns"
authors = [
    {name = "AWS", email = "noreply@amazon.com"}
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "boto3>=1.37.29",  # Core dependency for AWS services
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Optional dependencies for each component
[project.optional-dependencies]
# Core utilities only - minimal dependencies
core = []

# Development only dependencies
dev = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
]

# Image handling dependencies
image = [
    "Pillow>=11.1.0",
]

# OCR module dependencies
ocr = [
    "Pillow>=11.1.0",
    "PyMuPDF==1.25.5",
    "amazon-textract-textractor[pandas]>=1.9.2",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=1.5.0,<2.3.0"
]

# Classification module dependencies
classification = [
    "Pillow>=11.1.0",  # For image handling
]

# Extraction module dependencies
extraction = [
    "Pillow>=11.1.0",  # For image handling
]

# Assessment module dependencies
assessment = [
    "Pillow>=11.1.0",  # For image handling
]

# Evaluation module dependencies
evaluation = [
    "munkres>=1.1.4",  # For Hungarian algorithm
    "numpy>=1.24.0,<2.0.0",   # For numeric operations
]

# Appsync module dependencies
appsync = [
    "requests>=2.32.3",
]

# Testing dependencies
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.1",  # For parallel test execution
    "requests (>=2.32.3,<3.0.0)",
]

# Full package with all dependencies
all = [
    "Pillow>=11.1.0",
    "PyMuPDF==1.25.5",
    "amazon-textract-textractor[pandas]>=1.9.2",
    "munkres>=1.1.4",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=1.5.0,<2.3.0",
    "requests>=2.32.3",
]

[project.urls]
"Homepage" = "https://github.com/aws-samples/sample-genai-idp"
