[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "idp_common"
version = "0.3.4"
description = "Common utilities for GenAI IDP Accelerator patterns"
authors = [
    {name = "AWS", email = "noreply@amazon.com"}
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "boto3==1.38.36",  # Core dependency for AWS services
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Optional dependencies for each component
[project.optional-dependencies]
# Core utilities only - minimal dependencies
core = []

# Development only dependencies
dev = [
    "python-dotenv>=1.1.0,<2.0.0",
    "ipykernel>=6.29.5,<7.0.0",
    "jupyter>=1.1.1,<2.0.0",
]

# Image handling dependencies
image = [
    "Pillow==11.2.1",
]

# OCR module dependencies
ocr = [
    "Pillow==11.2.1",
    "PyMuPDF==1.25.5",
    "amazon-textract-textractor[pandas]==1.9.2",
    "numpy==1.26.4",
    "pandas==2.2.3"
]

# Classification module dependencies
classification = [
    "Pillow==11.2.1",  # For image handling
]

# Extraction module dependencies
extraction = [
    "Pillow==11.2.1",  # For image handling
]

# Assessment module dependencies
assessment = [
    "Pillow==11.2.1",  # For image handling
]

# Evaluation module dependencies
evaluation = [
    "munkres==1.1.4",  # For Hungarian algorithm
    "numpy==1.26.4",
]

# All dependencies combined
all = [
    "python-dotenv>=1.1.0,<2.0.0",
    "ipykernel>=6.29.5,<7.0.0",
    "jupyter>=1.1.1,<2.0.0",
    "Pillow==11.2.1",
    "PyMuPDF==1.25.5",
    "amazon-textract-textractor[pandas]==1.9.2",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "munkres==1.1.4",
]
